changed footer background color in dark mode. Fixed footer contact icon color rendering

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -3038,6 +3038,9 @@ body.bm-overlay {
 .colorContainer:not(.darkModeOn) footer .contactWrapper a:focus {
   outline: 2px solid #00050f;
 }
+.colorContainer:not(.darkModeOn) footer .contactWrapper svg {
+  color: #00050f;
+}
 .colorContainer:not(.darkModeOn) footer .homeBottomMargin.bottom {
   margin-bottom: 60px;
 }
@@ -3092,7 +3095,7 @@ body.bm-overlay {
   background-image: url("../img/egg-shell-inverted.png");
 }
 .colorContainer.darkModeOn main:not(.mainH)::after {
-  background: linear-gradient(-28deg, rgb(0, 5, 15) 14px, #ddd 15px, #bbb 16px, transparent 19px, transparent 0), linear-gradient(28deg, #00050f 2px, transparent 15px, #b8b8b8 14px, transparent 0), url("../img/egg-shell-inverted.png");
+  background: linear-gradient(-28deg, rgb(9, 21, 22) 14px, #ddd 15px, #bbb 16px, transparent 19px, transparent 0), linear-gradient(28deg, #091516 2px, transparent 15px, #b8b8b8 14px, transparent 0), url("../img/egg-shell-inverted.png");
   background-position: bottom;
   background-repeat: repeat-x;
   background-size: 32px 32px;
@@ -3186,10 +3189,13 @@ body.bm-overlay {
   color: #e5e8ee;
 }
 .colorContainer.darkModeOn footer {
-  background: #00050f;
+  background: #091516;
 }
 .colorContainer.darkModeOn footer .contactWrapper a:focus {
   outline: 2px solid #e5e8ee;
+}
+.colorContainer.darkModeOn footer .contactWrapper svg {
+  color: #e5e8ee;
 }
 .colorContainer.darkModeOn footer .bottom a {
   text-shadow: 0 0 20px rgba(192, 219, 255, 0.38), 0 0 12px rgba(65, 120, 255, 0.15);
